--- a/versions.gradle
+++ b/versions.gradle
@@ -3,4 +3,7 @@ ext {
     greekutilsversion = "0.8.11"
     xmlunitVersion = "1.3"
     icu4jVersion = "3.4.4"
+
+    ctsvVersion = "1.1"
+    specVersion =  "5.0.rc.2"	
 }   
